--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -19,7 +19,8 @@
         "import pandas as pd\n",
         "\n",
         "# Display all columns\n",
-        "pd.set_option('display.max_columns', None)"
+        "pd.options.display.max_columns = None"
+        "pd.options.display.max_rowss = None"
       ],
       "execution_count": null,
       "outputs": []
