--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -8,8 +8,7 @@
         "title: 'Walkthroughs and Exercises for *Data Analysis in Python*'\n",
         "author: \"Dr. Chester Ismay\"\n",
         "format: html\n",
-        "engine: knitr\n",
-        "---"
+        "engine: knitr\n"        
       ]
     },
     {
